<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/twenty_dp"
        android:background="@drawable/upcoming_background_card"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_gravity="center"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventy_dp"
                app:cardBackgroundColor="@color/blue_ribbon"
                app:cardCornerRadius="@dimen/fifty_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dayID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_25"
                        android:textColor="@color/white"
                        android:textSize="@dimen/fourteen_sp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/monthID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sep"
                        android:textColor="@color/white"
                        android:textSize="@dimen/fourteen_sp"
                        android:textStyle="bold"></TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/meetingtitleID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_today_meeting"
                android:textSize="@dimen/fourteen_sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/guestnameID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_guest_name"
                android:textSize="@dimen/twelve_sp"></TextView>
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/thirty_dp"
            android:layout_gravity="center"
            android:layout_weight="0.12"
            android:src="@drawable/forward_arrow"
            >
        </ImageView>

    </LinearLayout>

</RelativeLayout>