<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/dashboard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred_fifty_dp"
            android:scaleType="fitXY"
            android:src="@drawable/dashboard_app_theme"></ImageView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/profileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal"

        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                app:cardCornerRadius="@dimen/fifty_dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty_dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_test1"></ImageView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:text="@string/app_name1"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"></TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileDetails"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/let_s_connect_together"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagline"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courgette_regular"
            android:gravity="center"
            android:text="Welcome Back!"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_five_sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hundred_eighty_five_dp"
            android:fontFamily="@font/courgette_regular"
            android:text="@string/n_santhosh"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_five_sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lnrTab"
        android:layout_below="@+id/dashboard1">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/lnrTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_background_menu"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/forty_dp"
                android:layout_height="@dimen/forty_dp"
                android:layout_gravity="center"
                android:src="@drawable/home_icon"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lblHome"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/forty_dp"
                android:layout_height="@dimen/forty_dp"
                android:layout_gravity="center"
                android:src="@drawable/help_icon"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/forty_dp"
                android:layout_height="@dimen/forty_dp"
                android:layout_gravity="center"
                android:src="@drawable/setting_icon"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/forty_dp"
                android:layout_height="@dimen/forty_dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_icon"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>