<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/dashboard1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/hundred_fifty_dp"
                android:src="@drawable/dashboard_app_theme"
                android:scaleType="fitXY"
                >
            </ImageView>
        </RelativeLayout>
    <LinearLayout
        android:id="@+id/profileDetails"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"

        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                app:cardCornerRadius="@dimen/fifty_dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty_dp"
                    android:src="@drawable/img_test1"
                    android:scaleType="fitXY"
                    >
                </ImageView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            >
        </TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_connect_together"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp"
        android:layout_gravity="center"
        android:layout_below="@+id/profileDetails"
        android:gravity="center"
        >
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagline"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:text="Welcome Back!"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/twenty_five_sp"
            android:fontFamily="@font/courgette_regular"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/n_santhosh"
            android:layout_marginStart="@dimen/hundred_eighty_five_dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/twenty_five_sp"
            android:fontFamily="@font/courgette_regular"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>


        <LinearLayout
            android:layout_below="@+id/dashboard1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:weightSum="1"
            >
            <ImageView
                android:id="@+id/dashboardtheme_1"
                android:alpha="0.1"
                android:layout_weight="0.33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/dashboard_theme_gif"
                >
            </ImageView>
            <ImageView
                android:id="@+id/dashboardtheme_2"
                android:alpha="0.1"
                android:layout_weight="0.33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/dashboard_theme_gif"
                >
            </ImageView>
            <ImageView
                android:id="@+id/dashboardtheme_3"
                android:alpha="0.1"
                android:layout_weight="0.34"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/dashboard_theme_gif"
                >
            </ImageView>
        </LinearLayout>

</RelativeLayout>